<resources>
    <!--  Common Screen  -->
    <string name="app_name">WCFProject</string>
    <string name="common_email">Email</string>
    <string name="common_password">Contraseña</string>
    <string name="common_register">Registrar</string>
    <string name="common_error_fields">Rellena los campos correctamente</string>
    <string name="common_edit_save">Editar datos</string>
    <string name="common_weight">Peso</string>
    <string name="common_exercises">Ejercicios</string>
    <string name="common_date_saved_successfully">Datos guardados exitosamente</string>
    <string name="common_error_saving_to_database">Error al guardar en la base de datos</string>
    <string name="common_register_fail">Error al registrar el ususario en la base de datos</string>
    <string name="common_title">Titulo</string>



    <!--  Login Screen  -->
    <string name="login_screen_login">Iniciar sesión</string>
    <string name="login_screen_error">Error al inicio de sesión</string>
    <string name="login_screen_email_enter">Por favor, introduce tu correo electrónico</string>
    <string name="login_screen_email_not_verified">Correo electrónico no verificado</string>
    <string name="login_screen_email_format_incorrect">El formato del correo electrónico es incorrecto</string>
    <string name="login_screen_email_reset_password">Se ha enviado un correo electrónico para restablecer la contraseña</string>
    <string name="login_screen_email_again_later">Ha ocurrido un error. Por favor, inténtalo de nuevo más tarde</string>


    <!--  Register Screen  -->
    <string name="register_screen_title">Registro</string>
    <string name="register_screen_height">Altura</string>
    <string name="register_screen_repeat_password">Repetir contraseña</string>
    <string name="register_screen_error_firebase"> Registro fallido</string>
    <string name="register_screen_successfully_register"> Usuario registrado exitosamente</string>
    <string name="register_screen_verification_email_sent"> Email verificación enviado</string>
    <string name="register_screen_verification_email_failed"> Email verificación fallido</string>

    <!--  Exercises Screen  -->
    <string name="exercises_screen_chest">Pecho</string>
    <string name="exercises_screen_back">Espalda</string>
    <string name="exercises_screen_triceps">Tríceps</string>
    <string name="exercises_screen_biceps">Bíceps</string>
    <string name="exercises_screen_abdomen">Abdomen</string>
    <string name="exercises_screen_legs">Piernas</string>
    <string name="exercises_screen_shoulders">Hombros</string>

    <!--  Exercises Detail Screen  -->
    <string name="exercises_detail_screen_weight">Peso</string>
    <string name="exercises_detail_screen_repetitions">Repeticiones</string>
    <string name="exercises_detail_screen_notes">Anotaciones</string>

    <!--  Profile Screen  -->
    <string name="profile_screen_title">Perfil</string>
    <string name="profile_screen_save_data">Guardar datos</string>
    <string name="profile_screen_sign_off">Cerrar sesión</string>
    <string name="profile_screen_imc">IMC</string>
    <string name="profile_screen_registrate">Usuario registrado exitosamente</string>

    <!--  Dialog Screen  -->
    <string name="dialog_screen_question">¿Seguro que quieres cerrar sesión?</string>
    <string name="dialog_screen_cancel">Cancelar</string>
    <string name="dialog_screen_accept">Aceptar</string>
    <string name="dialog_screen_session_close">Sesión cerrada</string>

    <!--  Dialog Screen  -->
    <string name="exercise_detail_screen_save_data">Guardar datos</string>

    <!--  Routine Create Screen  -->
    <string name="routine_create_screen_name">Nombre</string>
    <string name="routine_create_screen_add">Añadir</string>
    <string name="routine_create_screen_save">Guardar</string>
    <string name="routine_create_screen_save_routine">Guardar rutina</string>
    <string name="routine_create_screen_routine_add">Nueva rutina añadida</string>
    <string name="routine_create_screen_choose_exercises">Elegir ejercicios</string>
    <string name="routine_create_screen_deleted">Rutina eliminada</string>
    <string name="routine_create_screen_name_write">Escribe el nombre de tu rutina</string>

    <!--  Routines Screen  -->
    <string name="routines_screen_title">Rutinas</string>

    <!--  BMI ranges message  -->
    <string name="range_1">Cuando tu IMC está por debajo de 18.5, significa que estás por debajo del peso normal. Esto puede indicar que no estás recibiendo suficientes nutrientes o que puedes tener una condición médica que necesita atención.</string>
    <string name="range_2">Un IMC en este rango es una buena señal, significa que estás en un peso normal y saludable. Esto generalmente se asocia con un menor riesgo de problemas de salud relacionados con la obesidad.</string>
    <string name="range_3">Cuando tu IMC está en este rango, tienes un poco de sobrepeso. No te preocupes, pero es importante tener en cuenta que podría aumentar tu riesgo de desarrollar problemas de salud como la diabetes tipo 2 o enfermedades cardíacas.</string>
    <string name="range_4">Aquí es donde comenzamos a hablar de obesidad. Si tu IMC está en este rango, significa que tienes obesidad grado I. Esto aumenta significativamente el riesgo de problemas de salud graves, como diabetes tipo 2 y enfermedades cardíacas.</string>
    <string name="range_5">En este punto, la obesidad se considera más grave. Si tu IMC está en este rango, tienes obesidad grado II. Esto significa un mayor riesgo de problemas de salud como enfermedades cardíacas, apnea del sueño y ciertos tipos de cáncer.</string>
    <string name="range_6">Cuando tu IMC supera los 40, tienes obesidad grado III, también conocida como obesidad mórbida. Esta es la forma más grave de obesidad y conlleva un riesgo extremadamente alto de problemas de salud graves y potencialmente mortales.</string>




</resources>