<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <include
        android:id="@+id/in_toolbar"
        layout="@layout/toolbar_layout" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:autofillHints="emailAddress"
        android:hint="@string/common_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/edit_text_color" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:hint="@string/common_password"
        android:inputType="textPassword"
        android:textColor="@color/edit_text_color" />

    <EditText
        android:id="@+id/et_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:hint="@string/register_screen_repeat_password"
        android:inputType="textPassword"
        android:textColor="@color/edit_text_color" />

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:hint="@string/common_weight"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/edit_text_color" />

    <EditText
        android:id="@+id/et_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:hint="@string/register_screen_height"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/edit_text_color" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/common_register" />

</LinearLayout>