<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.home.routines.create.RoutineSelectExerciseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/in_toolbar"
            layout="@layout/toolbar_layout" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_abdomen"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises_screen_abdomen"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_chest"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises_screen_chest"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_back"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises_screen_back"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_shoulders"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises_screen_shoulders"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_biceps"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises_screen_biceps"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_triceps"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises_screen_triceps"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_legs"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises_screen_legs"
                    app:checkedIconEnabled="true" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_exercices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_exercise" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="50dp"
        android:src="@drawable/add" />
</FrameLayout>