<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:importantForAccessibility="no"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints="emailAddress"
            android:hint="@string/common_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/edit_text_color" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints="password"
            android:hint="@string/common_password"
            android:inputType="textPassword"
            android:textColor="@color/edit_text_color" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_screen_login" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/common_register" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="¿Olvidaste la contraseña?"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>